# docker-public-ip

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  create_fixtures.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
config/: services.txt
src/docker_public_ip/: __main__.py  config.py  database.py  ip_checker.py  web.py
src/docker_public_ip/templates/: index.html
