[project]
name = "docker-public-ip"
version = "0.1.0"
description = "Docker service to monitor public IP changes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "flask>=3.0.0",
    "loguru>=0.7.2",
    "plotly>=5.18.0",
    "pandas>=2.1.4",
    "apscheduler>=3.10.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"